[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barkapay-payhub"
description = "Official Python client for the PayHub payments API — mobile money & crypto, one API across countries. Import as `payhub`."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "BarkaPay (PayHub)", email = "developers@payhub.africa" }]
keywords = ["payhub", "barkapay", "payments", "mobile-money", "fintech", "africa"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://payhub.africa/developers"
Documentation = "https://github.com/BarkaPay/payhub-python#readme"
Source = "https://github.com/BarkaPay/payhub-python"
Changelog = "https://github.com/BarkaPay/payhub-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/BarkaPay/payhub-python/issues"

[tool.hatch.version]
path = "src/payhub/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/payhub"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["payhub"]

[tool.mypy]
strict = true
files = ["src", "tests"]
warn_unreachable = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
